# BadRed

./: .gitignore  README.md  notes.md
bad_gap/: Cargo.toml
bad_gap/src/: gap_buffer.rs  lib.rs
bad_red/: Cargo.toml  build.rs
bad_red/default_files/: init.lua
bad_red/lua_lib/: buffer.lua  command.lua  doc.lua  editor.lua  file.lua  keymap.lua  message.lua  mode.lua  motion.lua  opts.lua  pane.lua  registers.lua  styling.lua
bad_red/src/: buffer.rs  display.rs  editor_frame.rs  editor_state.rs  file_handle.rs  hook_map.rs  keymap.rs  lib.rs  main.rs  pane.rs  script_handler.rs  script_runtime.rs  styling.rs
bad_red/src/buffer/: byte_char_iter.rs  content_buffer.rs  editor_buffer.rs  gap_buffer.rs  mod.rs  naive_buffer.rs
bad_red_lib/: buffer.lua  command.lua  doc.lua  editor.lua  file.lua  init.lua  keymap.lua  message.lua  mode.lua  pane.lua
bad_red_proc_macros/: Cargo.toml
bad_red_proc_macros/src/: from_lua_macro.rs  into_lua_macro.rs  lib.rs  script_table.rs  type_derives.rs
profiling/large_file/: gap_startup.lua  naive_startup.lua
