[package]
name = "bad_red"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bad_red"
path = "src/main.rs"

[lib]
name = "bad_red_lib"
path = "src/lib.rs"

[dependencies]
crossterm = "0.27.0"
strum = "0.26.2"
strum_macros = "0.26.2"
etcetera = "0.8.0"
clap = { version = "4.5.4", features = ["derive"] }

[dependencies.mlua]
version = "0.9.8"
features = ["lua54"]

[target.x86_64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
