# This file is part of BadRed.

# BadRed is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# 
# BadRed is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along with BadRed. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "bad_red"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bad_red"
path = "src/main.rs"

[lib]
name = "bad_red_lib"
path = "src/lib.rs"

[dependencies]
crossterm = "0.28.1"
strum = "0.26.2"
strum_macros = "0.26.2"
etcetera = "0.8.0"
clap = { version = "4.5.4", features = ["derive"] }
bad_red_proc_macros = { path = "../bad_red_proc_macros/" }
bad_gap = { path = "../bad_gap/" }
bimap = "0.6.3"
unicode-width = "0.1.14"
shellexpand = "3.1.0"
regex = "1.11.0"

[dependencies.mlua]
version = "0.9.8"
features = ["lua54"]

[build-dependencies]
itertools = "0.13.0"

[package.metadata]
build = "build.rs"

