# This file is part of BadRed.

# BadRed is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# 
# BadRed is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
[lib]
proc-macro = true

[package]
name = "bad_red_proc_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.66", features = ["extra-traits"] }
proc-macro2 = "1.0.85"

[dependencies.mlua]
version = "0.9.8"
features = ["lua54"]
